# InferEngine

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
bench/vllm/: requirements.txt  run_lightning.sh  run_pair.sh  summarize_gpu.py  verify.py
benchmark-results/lightning-a100-paged-qwen-rawproxy-20260626T042528Z/: comparison.json  environment.txt  inferengine-commit.txt  inferengine-dirty.txt  inferengine-gpu.csv  inferengine-gpu.json  inferengine.json  inferengine.txt  vllm-gpu.csv  vllm-gpu.json  vllm.json  vllm.txt
docs/: GPU_SETUP.md  LIGHTNING_AI.md  architecture.md  benchmark.md
docs/evidence/: inferengine-vllm-a100-qwen-20260626.md
inferengine/api/: main.py  schemas.py
inferengine/core/: cache.py  config.py  scheduler.py  tokenizer.py
inferengine/kernels/: __init__.py  fused_qkv.py
inferengine/metrics/: prom.py
inferengine/model/: backend.py  hf_decoder.py  toy_decoder.py  vllm_paged.py
scripts/: bench.py  demo.py  gpu_preflight.py  run_server.sh
tests/: test_cache.py  test_fused_qkv.py  test_openai_api.py  test_scheduler.py  test_vllm_paged_backend.py  test_vllm_verifier.py
